# zzj-pricedb

./: .gitignore  CLAUDE.md  auto-imports.d.ts  components.d.ts  index.html  package-lock.json  package.json  readme.md  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
refData/: 价格数据导出.xlsx  附件1-2019年第三期阀门20260429.xlsx
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/__tests__/: db.test.ts  excel.test.ts
src/api/: db.ts  excel.ts
src/components/: CategoryModal.vue  CategorySidebar.vue  PriceFormModal.vue  PriceTable.vue
